<resources>
    <string name="app_name">Flix Hub</string>
    <string name="movie">Movies</string>
    <string name="tv_show">Tv Shows</string>
    <string name="genres">Genre 1, Genre 2, Genre 3</string>
    <string name="directed_by">Directed By</string>
    <string name="director">Movie\'s Director</string>
    <string name="release_date">Release Date</string>
    <string name="date">February 29, 2020</string>
    <string name="text_quote">If you truly desire greatness, you must first know what makes you weak!</string>
    <string name="nice_score">69%</string>
    <string name="synopsis">Synopsis</string>
    <string name="text_placeholder">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.></string>
    <string name="share_title">Share this movie now.</string>
    <string name="share_tv_show">Let\'s check %s out! \nhttps://www.themoviedb.org/tv/%s</string>
    <string name="share_movie">Let\'s check %s out! \nhttps://www.themoviedb.org/movie/%s</string>
    <string name="error_message">Request Error %1$d, with status code: %2$d. %3$s</string>
    <string name="type_not_found_message">The type of entertainment you requested could not be found</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_delete_all">Delete All Favorite</string>
    <string name="no_favorite_movies">There are no movies in favorite list.</string>
    <string name="no_favorite_tv_shows">There are no tv shows in favorite list.</string>
    <string name="text_add_favorite">%s has been added to favorite list.</string>
    <string name="text_remove_favorite">%s has been removed from favorite list.</string>
    <string name="dialog_delete_title">Delete All Favorite</string>
    <string name="dialog_delete_message">Are you sure you want to delete every %s from favorite?</string>
    <string name="dialog_confirm_yes">YES</string>
    <string name="dialog_confirm_no">NO</string>
    <string name="menu_popularity">Popularity</string>
    <string name="menu_original_title">Original Title</string>
    <string name="menu_score">Score</string>
    <string name="menu_vote_count">Vote Count</string>
    <string name="menu_default">Default</string>
    <string name="menu_title_a_z">Title (A-z)</string>
    <string name="menu_title_z_a">Title (Z-a)</string>
    <string name="menu_score_highest">Score (Highest)</string>
    <string name="menu_score_lowest">Score (Lowest)</string>
</resources>